--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Página Web Cafetería con Sass + Gulp",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp"
   },
   "author": "Gabriel Domínguez Prado",
   "license": "ISC",
